# FluxMux

./: ARCHITECTURE.md  BRIDGE_IMPLEMENTATION.md  CLOUD_KAFKA_SERVICES.md  COMPLETE.md  Cargo.toml  DOCUMENTATION_MAP.md  GUI_SETUP.md  KAFKA_COMMAND.md  KAFKA_IMPLEMENTATION.md  PIPE_COMMAND.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REALTIME_WORKFLOW.md  SETUP.md  START_HERE.md  cloud-kafka-demo.sh  demo-realtime.sh  hot.json  input.csv  input.json  input.toml  input.yaml  output.csv  output.json  output_release.csv  output_test.yaml  sample.parquet  schema.json  start-gui.sh  test_input.json
crates/fluxmux-cli/: Cargo.toml
crates/fluxmux-cli/src/: conversions.rs  endpoints.rs  kafka_inspector.rs  main.rs
crates/fluxmux-codecs/: Cargo.toml
crates/fluxmux-codecs/src/: lib.rs
crates/fluxmux-connectors/: Cargo.toml
crates/fluxmux-connectors/src/: file.rs  kafka.rs  lib.rs  pipe.rs
crates/fluxmux-core/: Cargo.toml
crates/fluxmux-core/src/: engine.rs  lib.rs  message.rs  middleware.rs  pipe_actions.rs  pipe_engine.rs  traits.rs
crates/fluxmux-plugins/: Cargo.toml
crates/fluxmux-sinks/: Cargo.toml
crates/fluxmux-sinks/src/: file.rs  kafka.rs  lib.rs  pipe.rs  postgres.rs
crates/fluxmux-ui/: Cargo.toml
fluxmux-backend/: package-lock.json  package.json  server.js
fluxmux-frontend/: package-lock.json  package.json
fluxmux-frontend/src/: App.css  App.js
fluxmux-frontend/src/components/: Bridge.js  Convert.js  Home.js  Kafka.js  Pipe.js
