[package]
name = "fluxmux"
version = "0.1.0"
edition = "2021"

[dependencies]
avro-rs = "0.13.0"
parquet = "56.1.0"
rmp-serde = "1.3.0"
serde_cbor = "0.11.2"

[workspace]
members = [
    "crates/fluxmux-core",
    "crates/fluxmux-cli",
    "crates/fluxmux-connectors",
    "crates/fluxmux-codecs",
    "crates/fluxmux-ui",
    "crates/fluxmux-sinks",
    "crates/fluxmux-plugins",
    "examples/convert",
    "examples/bridge", 
]
