[package]
name = "fluxmux-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
fluxmux-core = { path = "../fluxmux-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
anyhow = "1"
